test/sema/unsatisfied-generic-constraint.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

interface Fooable {
    def foo()
}

struct F: Copyable {
    def foo(): int { return 1 }
}

def main() {
    let f: F = undefined;

    // CHECK: 15:8: error: type 'F' doesn't implement interface 'Fooable'
    bar(f);
}

def bar<T: Fooable>(t: T) {
    t.foo()
}
